--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -416,3 +416,77 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+/* #Alizarin Flat Button
+==================================================*/
+.smurfs-flat-button {
+  position: relative;
+  vertical-align: top;
+	min-width: 95%;
+	min-height: 100px;
+	margin: 10px;
+    border-radius: 0;
+    text-transform: uppercase;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #3277b3;
+  border: 0;
+  border-bottom: 2px solid #205a8d;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -3px #205a8d;
+  box-shadow: inset 0 -3px #205a8d;
+}
+.smurfs-flat-button:active {
+  top: 3px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.matrix-flat-button {
+  position: relative;
+  vertical-align: top;
+	min-width: 95%;
+	min-height: 100px;
+	margin: 10px;
+    border-radius: 0;
+    text-transform: uppercase;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #5cb85c;
+  border: 0;
+  border-bottom: 2px solid #519951;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -3px #519951;
+  box-shadow: inset 0 -3px #519951;
+}
+.matrix-flat-button:active {
+  top: 3px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.hackers-flat-button {
+  position: relative;
+  vertical-align: top;
+	min-width: 95%;
+	min-height: 100px;
+	margin: 10px;
+    border-radius: 0;
+    text-transform: uppercase;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #d9534f;
+  border: 0;
+  border-bottom: 2px solid #953b39;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -3px #953b39;
+  box-shadow: inset 0 -3px #953b39;
+}
+.hackers-flat-button:active {
+  top: 3px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
