--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -350,14 +350,12 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #42dca3;
     color: #42dca3;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #42dca3;
     outline: 0;
     color: #000;
     background-color: #42dca3;
@@ -419,6 +417,7 @@ body {
 /* #Alizarin Flat Button
 ==================================================*/
 .smurfs-flat-button {
+  outline:0!important;
   position: relative;
   vertical-align: top;
 	min-width: 95%;
@@ -443,6 +442,7 @@ body {
   box-shadow: none;
 }
 .matrix-flat-button {
+  outline:0!important;
   position: relative;
   vertical-align: top;
 	min-width: 95%;
@@ -467,6 +467,7 @@ body {
   box-shadow: none;
 }
 .hackers-flat-button {
+  outline:0!important;
   position: relative;
   vertical-align: top;
 	min-width: 95%;
@@ -486,7 +487,7 @@ body {
 }
 .hackers-flat-button:active {
   top: 3px;
-  outline: none;
+  outline:none;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
